<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg_vector"
    android:orientation="vertical"
    tools:context=".Activity.LogInActivity">

    <LinearLayout
        android:id="@+id/ll_secondScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_l1logo"
            android:layout_width="105dp"
            android:layout_height="105dp"
            android:layout_marginTop="22dp"
            android:src="@drawable/ic_icon_" />

        <TextView
            android:id="@+id/tv_slogan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/avenir_nextitpro_bold"
            android:text="@string/slogan"
            android:textColor="@color/white"
            android:textSize="@dimen/_36ssp" />


        <EditText
            android:id="@+id/et_l1CnicPassport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/edittext_white_corner"
            android:drawableEnd="@drawable/question"
            android:fontFamily="@font/avenir_nextitpro_regular"
            android:hint="@string/cnicPassport"
            android:inputType="text"
            android:lines="1"
            android:maxLength="15"
            android:paddingStart="@dimen/_20sdp"
            android:paddingTop="@dimen/_7sdp"
            android:paddingEnd="@dimen/_20sdp"
            android:paddingBottom="@dimen/_7sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_11ssp" />


        <com.subhrajyoti.passwordview.PasswordView
            android:id="@+id/pv_l1Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/edittext_white_corner"
            android:fontFamily="@font/avenir_nextitpro_regular"
            android:hint="Enter Password"
            android:paddingStart="@dimen/_20sdp"
            android:paddingTop="@dimen/_7sdp"
            android:paddingEnd="@dimen/_20sdp"
            android:paddingBottom="@dimen/_7sdp"
            android:textSize="@dimen/_11ssp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_l1ForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_weight="0.5"
            android:fontFamily="@font/avenir_nextitpro_regular"
            android:text="@string/forgot"
            android:textColor="@color/white"
            android:textSize="@dimen/_11ssp" />

        <TextView
            android:id="@+id/tv_l1newUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:fontFamily="@font/avenir_nextitpro_regular"
            android:text="@string/newUser"
            android:textColor="@color/white"
            android:textSize="@dimen/_11ssp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/pb_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:id="@+id/tv_failMessage"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:fontFamily="@font/avenir_nextitpro_bold"
        android:textSize="@dimen/_12ssp"
        android:text="UserName or Password is invalid."
        android:textColor="#EF2626"
        android:background="@drawable/invalid_credientials"
        android:visibility="gone"/>




    <Button
        android:id="@+id/btn_l1Login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:background="@drawable/btn_corner"
        android:fontFamily="@font/avenir_nextitpro_bold"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textSize="@dimen/_10ssp" />

</LinearLayout>